removed fixed height on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,6 @@ footer {
     }
     #calc_container {
         width: 100vw;
-        height: 100vh;
     }
 
     footer {
